<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DBDataListView">
    <ListView
        android:id="@+id/list_4_datalist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:listSelector="#EAEAEA"
        android:dividerHeight="1dp"
        android:divider="#C0C0C0"/>
    <Button
        android:id="@+id/btn_delete"
        android:text="@string/title_delete"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_update"
        android:text="@string/title_update"
        android:layout_toRightOf="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_test_up_price"
        android:text="@string/title_test_up_price"
        android:layout_toRightOf="@+id/btn_update"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_test_down_price"
        android:text="@string/title_test_down_price"
        android:layout_toRightOf="@+id/btn_test_up_price"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_test_tracking"
        android:text="@string/title_test_tracking"
        android:layout_toRightOf="@+id/btn_test_down_price"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/btn_test_no_user_checked"
        android:text="@string/title_test_no_user_check"
        android:layout_above="@+id/btn_delete"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
